Magnifier: Caret tracking not working
Affected version
System information:
- Arch Linux (kernel 6.6.56-1-lts)
- Gnome 47.0 (gnome-shell 47.0-1)
- Mutter (Wayland)
- No extensions enabled
Bug summary
The magnifier doesn't follow the text caret when typing in a text field.
Steps to reproduce
- Enable caret tracking in gsettings:
gsettings set org.gnome.desktop.a11y.magnifier caret-tracking centered
- Set the 'Magnifier View' to 'follow mouse cursor' in settings->Accessibility->Zoom
- Enable 'Desktop Zoom' in settings->Accessibility->Zoom
- Start typing in an arbitrary application (Not working in any application. The logs are reproducible bu using i.e. gnome-terminal).
What happened
Nothing. The position of the magnifier doesn't change when typing.
What did you expect to happen
The magnified part of the screen is supposed to be centered over the position of the text caret when it moves.
Relevant logs, screenshots, screencasts etc.
Journalctl shows the following message:
gnome-shell[1189]: Failed to read extents of text caret: focusWindow.is_client_decorated is not a function
Sometimes this error occurs as well:
gnome-shell[1189]: g_closure_add_invalidate_notifier: assertion 'closure->n_inotifiers < CLOSURE_MAX_N_INOTIFIERS' failed
Edited by Jan Porowski